<resources>
    <string name="app_name" translatable="false">Health App</string>
    <string name="ant_intro" translatable="false">
Ever wondered why you were trembling before your exam, or why your palms got sweaty before that job interview? \n These anxious feelings are a natural way for the body to prepare itself for an important event. You would have also noticed how you started to calm down once the event was under way; you started to breathe easier and your heart stopped thumping. Such an anxiety actually helps us perform better as it makes us more alert.
However, some people experience anxiety or anxiety attacks for no apparent reason. \n If you find it hard to control your worries and if these constant feelings of anxiety affect your ability to go about your daily activities, then it might be a case of an anxiety disorder.

    </string>
    <string name="ant_sign" translatable="false">
        •	Increased heart rate and heavy breathing\n
•	Increased muscle tension\n
•	Tightening sensation in the chest.\n
•	Unsubstantiated and growing worries, and restlessness.\n
•	Obsessing over needless things leading to compulsive behavior\n
•  Sense of impending doom or danger.\n
•  Fear of loss of control or death.\n
•  Rapid, pounding heart rate.\n
•  Sweating.\n
•  Trembling or shaking.\n
•  Shortness of breath or tightness in your throat\n
•  Chills.\n


    </string>
    <string name="ant_ca" translatable="false"> •	Heart disease.\n
•	Diabetes.\n
•	Thyroid problems, such as hyperthyroidism.\n
•	Respiratory disorders, such as chronic obstructive pulmonary disease (COPD) and asthma.\n
•	Drug misuse or withdrawal.\n
•	Withdrawal from alcohol, anti-anxiety medications (benzodiazepines) or other medications.\n
•	Chronic pain or irritable bowel syndrome.\n


    </string>
    <string name="ant_tre" translatable="false">Self-care.\n
Avoid alcohol, Reduce caffeine intake, Physical exercise, Stress management, Quitting smoking,
        Relaxation techniques and Healthy diet.\n
Therapies :\n
Cognitive behavioral therapy, Meditation and Psychotherapy.

Medications:\n
Selective Serotonin Reuptake Inhibitor (SSRI), Anxiolytic, Antidepressant, Sedative and Nerve pain medication.\

Specialists:\n
Clinical Psychologist, Psychiatrist and Primary Care Provider (PCP).\n
Consult a doctor for medical advice.\n
Sources: Apollo Hospitals and others.\n


    </string>
    <string name="dep_intro" translatable="false">

 Depression is a mood disorder that involves a persistent feeling of sadness and loss of interest. It is different from the mood fluctuations that people regularly experience as a part of life.
Major life events, such as bereavement or the loss of a job, can lead to depression. However, doctors only consider feelings of grief to be part of depression if they persist.
Depression is an ongoing problem, not a passing one. It consists of episodes during which the symptoms last for at least 2 weeks. Depression can last for several weeks, months, or years.

    </string>
    <string name="dep_sign" translatable="false">
•	a depressed mood.\n
•	reduced interest or pleasure in activities once enjoyed.\n
•	a loss of sexual desire.\n
•	changes in appetite.\n
•	unintentional weight loss or gain.\n
•	sleeping too much or too little.\n
•	agitation, restlessness, and pacing up and down.\n
•	slowed movement and speech.\n
•	fatigue or loss of energy.\n
•	feelings of worthlessness or guilt.\n
•	difficulty thinking, concentrating, or making decisions.\n
•	recurrent thoughts of death or suicide, or an attempt at suicide.\n

    </string>
    <string name="dep_ca" translatable="false">•	genetic features.\n
•	changes in the brain’s neurotransmitter levels.\n
•	environmental factors.\n
•	psychological and social factors.\n
•	additional conditions, such as bipolar disorder.\n


    </string>
    <string name="dep_tre" translatable="false">
Psychotherapy may help a person manage their symptoms of depression.\n
Depression is treatable, and managing symptoms usually involves three components:\n
Support: This can range from discussing practical solutions and possible causes to educating family members.\n
Psychotherapy: Also known as talking therapy, some options include one-to-one counseling and cognitive behavioral therapy (CBT).\n
Drug treatment: A doctor may prescribe antidepressants.

    </string>
    <string name="bip_intro" translatable="false">
Bipolar disorder, formerly called manic depression, is a mental health condition that causes extreme mood swings that include emotional highs (mania or hypomania) and lows (depression).
When you become depressed, you may feel sad or hopeless and lose interest or pleasure in most activities. When your mood shifts to mania or hypomania (less extreme than mania), you may feel euphoric, full of energy or unusually irritable. These mood swings can affect sleep, energy, activity, judgment, behavior and the ability to think clearly.\n
•	Abnormally upbeat, jumpy or wired.\n
•	Increased activity, energy or agitation.\n
•	Exaggerated sense of well-being and self-confidence (euphoria).\n
•	Decreased need for sleep.\n
•	Unusual talkativeness.\n
•	Racing thoughts.\n
•	Distractibility.\n
•	Poor decision-making — for example, going on buying sprees, taking sexual risks or making foolish investments.\n


    </string>
    <string name="bip_sign">

•	Abnormally upbeat, jumpy or wired.\n
•	Increased activity, energy or agitation.\n
•	Exaggerated sense of well-being and self-confidence (euphoria).\n
•	Decreased need for sleep.\n
•	Unusual talkativeness.\n
•	Racing thoughts.\n
•	Distractibility.\n
•	Poor decision-making — for example, going on buying sprees, taking sexual risks or making foolish investments.\n





    </string>
    <string name="bip_ca">•  impaired judgment.\n
•  feeing “wired”.\n
•  a sense of distraction or boredom.\n
•  missing work or school, or underperforming.\n
•  thinking they can “do anything”.\n
•  belief that nothing is wrong.\n
•  being extremely forthcoming, sometimes aggressively so.\n
•  likelihood of engaging in risky behavior.\n


    </string>
    <string name="bip_tre">Lithium carbonate is the most commonly prescribed long-term drug to treat long-term episodes of depression.\n and mania or hypomania.\n Patients usually take lithium for at least 6 months.
It is essential for the patient to follow the doctor’s instructions about when and how to take their medication in order for the drugs to work.\n
Hospitalization is less common now than in the past. However, temporary hospitalization may be advisable if there is a risk of the patient harming themselves or others.
Electroconvulsive therapy (ECT) may help if other treatments are not effective.\n
Keeping up a regular routine with a healthy diet, enough sleep, and regular exercise can help the person maintain stability.


    </string>
    <string name="sch_intro">
Schizophrenia is a mental disorder that usually appears in late adolescence or early adulthood. Characterized by delusions, hallucinations, and other cognitive difficulties, schizophrenia can often be a lifelong struggle.

Schizophrenia most commonly strikes between the ages of 16 and 30, and males tend to show symptoms at a slightly younger age than females. In many cases, the disorder develops so slowly that the individual does not know that they have had it for many years. However, in other cases, it can strike suddenly and develop quickly.


    </string>
    <string name="sch_sign">•	Delusions – the patient displays false beliefs, which can take many forms, such as delusions of persecution, or delusions of grandeur. They may feel others are attempting to control them remotely. Or, they may think they have extraordinary powers and abilities.\n
•	Hallucinations – hearing voices is much more common than seeing, feeling, tasting, or smelling things which are not there, however, people with schizophrenia may experience a wide range of hallucinations.\n
•	Thought disorder – the person may jump from one subject to another for no logical reason. The speaker may be hard to follow or erratic.


    </string>
    <string name="sch_ca">•	Delusions – the patient displays false beliefs, which can take many forms, such as delusions of persecution, or delusions of grandeur. They may feel others are attempting to control them remotely. Or, they may think they have extraordinary powers and abilities.
\n•	Hallucinations – hearing voices is much more common than seeing, feeling, tasting, or smelling things which are not there, however, people with schizophrenia may experience a wide range of hallucinations.
\n•	Thought disorder – the person may jump from one subject to another for no logical reason. The speaker may be hard to follow or erratic.


    </string>
    <string name="sch_tre">
Treatments that are recommended for schizophrenia include:\n
•	cognitive behavioural therapy (CBT).\n
•	medication.\n
•	family intervention.\n
•	arts therapies.\n
The National Institute for Health and Care Excellence (NICE) – the organisation that produces guidelines on best practice in health care – recommends treating schizophrenia and psychosis with a combination of talking treatments and antipsychotic medication while you are unwell.
You can read the full guidelines on the NICE website, including a list of questions you might want to ask about your diagnosis and treatment.


    </string>
    <string name="rec_intro">Hypocalcemia, a low level of calcium in the blood can result in tetany – uncontrolled muscle spasms. Dental problems can also arise. An X-ray or radiograph of an advanced sufferer from rickets
        tends to present in a classic way: the bowed legs (outward curve of long bone of the legs) and a deformed chest.

    </string>
    <string name="rec_sign">pain or tenderness in the bones of the arms, legs, pelvis, or spine.\n
stunted growth and short stature.\n
•	bone fractures.\n
•	muscle cramps.\n
•	teeth deformities, such as: delayed tooth formation. holes in the enamel.\n
•	skeletal deformities.\n
    </string>
    <string name="rec_cau"> The most common cause of rickets is a lack of vitamin D or calcium in a children diet.\n
        Both are essential for children to develop strong and healthy bones. Sources of vitamin D are.\n
        sunlight your skin produces vitamin D when it is exposed to the sun, and we get most of our vitamin D this way.

    </string>
    <string name="rec_tre">Treatment for rickets focuses on replacing the missing vitamin or mineral in the body. This will eliminate most of the symptoms associated with rickets. If your child has a vitamin D deficiency, your doctor will likely want them to increase their exposure to sunlight, if possible.
        They will also encourage them to consume food products high in vitamin D, such as fish, liver, milk, and eggs.

    </string>
    <string name="io_intro">
Iodine deficiency is a lack of the trace element iodine, an essential nutrient in the diet. It may result in metabolic problems such as goiter, sometimes as an endemic goiter as well as cretinism due to untreated congenital hypothyroidism,
        which results in developmental delays and other health problems.

    </string>
    <string name="io_sign">
        Iodine deficiency is a lack of the trace element iodine, an essential nutrient in the diet.
        It may result in metabolic problems such as goiter, sometimes as an endemic goiter as well as cretinism due to untreated congenital hypothyroidism,
        which results in developmental delays and other health problems.


    </string>
    <string name="io_cau">Iodine deficiency is a lack of the trace element iodine, an essential nutrient in the diet. It may result in metabolic problems such as goiter, sometimes as an endemic goiter as well as cretinism due to untreated congenital hypothyroidism,
        which results in developmental delays and other health problems.

    </string>
</resources>